--- a/daa_updated.html
+++ b/daa_updated.html
@@ -106,6 +106,17 @@
 
       <h5>Output:</h5>
       <img id="img1"  src="output/daa_output_5.png"><br><br>
+
+      <h4> Q6:- WAP in c to implement BFS?</h4>
+      <img id="img1"  src="code/daa_code_6.png"> <br>
+
+      <h5>Output:</h5>
+      <img id="img1"  src="output/daa_output_6.png"><br><br>
+      <h4> Q7:- WAP in c to implement DFS?</h4>
+      <img id="img1"  src="code/daa_code_7.png"> <br>
+
+      <h5>Output:</h5>
+      <img id="img1"  src="output/daa_output_7.png"><br><br>
        </div>
 </body>
 <div id="footer">
