--- a/daa_updated.html
+++ b/daa_updated.html
@@ -122,8 +122,8 @@
 <div id="footer">
         <div id="download">
             Download data<br>
-            <a href="d/output_1.png" download="Ak-download.png">Output</a>&nbsp;
-
+            <a href="d/output_1.png" download="Ak-download.png">Output1</a>&nbsp;
+            <a href="d/output_2.png" download="Ak-download2.png">Output2</a>&nbsp;
     </div></div>
         <br>
         <div style="display: flex; justify-content: space-between;">
