--- a/index.html
+++ b/index.html
@@ -51,7 +51,75 @@
     <p style="color: red;">Website is Down Now !!!</p>
     <p>Download Our Application</p>  
   </div>
-<a href="App/Helpdesk.apk" download="Helpdesk.apk"><input type="button" value="Download" id="btn"></a>
+<style>
+                    @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;600&display=swap');
+                    .item {
+                        min-width: 100px;
+                        width: 100px;
+                        position: relative;
+                        vertical-align: top;
+                        margin: 10px 10px 10px 0;
+                        white-space: normal;
+                        line-height: 1.2;
+                    }
+                    .item figure {
+                        width: auto;
+                        height: 100px;
+                        margin: 0 0 10px;
+                        text-align: center;
+                        cursor: pointer;
+                    }
+                    .item figure img {
+                        width: 100px;
+                        height: auto;
+                        border-radius: 5px;
+                    }
+                    .item div.name {
+                        font-family: Roboto slab, serif;
+                        color: #333333;
+                        font-size: 14px;
+                        font-weight: 600;
+                        word-break: break-word;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-align: center;
+                    }
+                    .item div.name a {
+                        text-decoration: none;
+                        color: inherit;
+                        cursor: pointer;
+                    }
+                    .item div.description {
+                        font-family: Roboto slab,serif;
+                        color: #999;
+                        font-size: 12px;
+                        font-weight: 300;
+                        margin-top: 5px;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-align: center;
+                    }
+        </style>
+                    <div class="item">
+                        <figure onclick="location.href='https://helpdesk.en.uptodown.com/android';">
+                            <img 
+                                width="100px"
+                                height="100px"
+                                alt="Helpdesk icon"
+                                loading="lazy"
+                                class="app_card_img"
+                                src="https://img.utdstc.com/icon/f97/fed/f97fed655e928f3e67491ff7929f1664a031b39197c4e3c41c9377aae27cb5b9"
+                                srcset="https://img.utdstc.com/icon/f97/fed/f97fed655e928f3e67491ff7929f1664a031b39197c4e3c41c9377aae27cb5b9:100 1x, https://img.utdstc.com/icon/f97/fed/f97fed655e928f3e67491ff7929f1664a031b39197c4e3c41c9377aae27cb5b9:200 2x, https://img.utdstc.com/icon/f97/fed/f97fed655e928f3e67491ff7929f1664a031b39197c4e3c41c9377aae27cb5b9:300 3x">
+                    </figure>
+                    <div class="name">
+                        <a href="https://helpdesk.en.uptodown.com/android" title="Download Helpdesk">Helpdesk</a>
+                    </div>
+                    <div class="description">Learning companion designed for engineering students</div>
+                    </div>
 <p style="margin-top: 80%; color: red;">With ❤ Team Debugger</p>
 </center></div><br><br>
 
