--- a/mech_updated.html
+++ b/mech_updated.html
@@ -2166,6 +2166,98 @@ The Kinetic friction is always somewhat less than the maximum static friction.
     y component of force F = -Fsin36.869<br>
     y component of force F = -Fsin36.869<br>
     y component of force F = -240N <b>Ans</b><br>
+<b>Q&GreaterGreater;One end of a uniform ladder weights 30 N rest against a smooth wall and the other end on the 
+	rough horizontal floor. Coefficient of friction is 0.24. Find the inclination of ladder to the
+	horizontal when it is on the point of slipping.<br>
+   <img src="img/70.png" alt="Image Not found" width="200px"><br>
+   Sol -
+   </b><br>
+   Free body diagram of ladder-<br>
+   <img src="img/70.1.png" alt="Image Not found" width="250px"><br>
+   &DoubleRightArrow; &uparrow;+ve&sum;F<sub>y</sub> = 0<br>
+   &DoubleRightArrow; R<sub>B</sub> - 30 = 0<br>
+   &DoubleRightArrow; R<sub>B</sub> = 30N<br><br>
+   Frictional force,<br>
+   F<sub>B</sub> = &mu;R<sub>B</sub><br>
+   &DoubleRightArrow; F<sub>B</sub> = 0.24 x 30 = 7.2N<br><br>
+   &DoubleRightArrow; &RightArrow;+ve&sum;F<sub>x</sub> = 0<br>
+   &DoubleRightArrow; R<sub>A</sub> - F<sub>B</sub> = 0<br>
+   &DoubleRightArrow; R<sub>A</sub> - 7.2 = 0<br>
+   &DoubleRightArrow; R<sub>A</sub> = 7.2N<br><br>
+
+   &DoubleRightArrow; &circlearrowright;+ve&sum;M<sub>B</sub> = 0<br>
+   &DoubleRightArrow; R<sub>A</sub> x lsin&theta; - 30 x l/2cos&theta; = 0<br>
+   &DoubleRightArrow; 7.2 x lsin&theta; - 15 x lcos&theta; = 0<br>
+   &DoubleRightArrow; 7.2 x lsin&theta; = 15 x lcos&theta; <br>
+   &DoubleRightArrow; 7.2 x sin&theta; = 15 x cos&theta; <br>
+   &DoubleRightArrow; sin&theta;/cos&theta; = 15/7.2 <br>
+   &DoubleRightArrow; tan&theta; = 15/7.2<br>
+   &DoubleRightArrow; &theta; = tan<sup>-1</sup>(15/7.2) = 64.358 <b>Ans</b><br><br>
+
+   <b>Q&GreaterGreater;
+    A uniform ladder of length 5 m and weights 400 N is placed against a smooth vertical wall with 
+    its lower end 4 m from the left wall. In this position the ladder is just to slip. Determined <br>
+    1) The coefficient of friction between the ladder and the floor.<br>
+    2) Frictional force acting on the ladder at the point of contact between the ladder and the floor.
+<br>
+<img src="img/71.png" alt="Image Not found" width="200px"><br>
+Sol -
+</b><br>
+Free body diagram of ladder-<br>
+<img src="img/71.1.png" alt="Image Not found" width="200px"><br>
+&DoubleRightArrow; &uparrow;+ve&sum;F<sub>y</sub> = 0<br>
+&DoubleRightArrow; R<sub>B</sub> - 400 = 0<br>
+&DoubleRightArrow; R<sub>B</sub> = 400N<br><br>
+
+&DoubleRightArrow; &circlearrowright;+ve&sum;M<sub>B</sub> = 0<br>
+&DoubleRightArrow; R<sub>A</sub> x 5sin&theta; - 400 x 2.5cos&theta; = 0<br>
+&DoubleRightArrow; R<sub>A</sub> x 5sin&theta; = 400 x 2.5cos&theta; = 0<br>
+&DoubleRightArrow; R<sub>A</sub> = (400 x 2.5cos&theta;)/5sin&theta;<br>
+&DoubleRightArrow; R<sub>A</sub> = {400 x 2.5cos(36.869)}/5sin(36.869)<br>
+&DoubleRightArrow; R<sub>A</sub> = 266.675N<br><br>
+&DoubleRightArrow; &RightArrow;+ve&sum;F<sub>x</sub> = 0<br>
+&DoubleRightArrow; R<sub>A</sub> - F<sub>B</sub> = 0<br>
+&DoubleRightArrow; R<sub>A</sub> = F<sub>B</sub> <br>
+&DoubleRightArrow; R<sub>A</sub> = 266.675N<br><br>
+
+Frictional force,<br>
+F<sub>B</sub> = &mu;R<sub>B</sub><br>
+&DoubleRightArrow; &mu; =  F<sub>B</sub> / &mu;R<sub>B</sub><br>
+&DoubleRightArrow; &mu; =  266.675/400<br>
+&DoubleRightArrow; &mu; =  0.666 <b>Ans</b><br>
+
+<b>Q&GreaterGreater;The ladder AB shown in fig weights 200 N. The coefficient of friction between
+     the ladder and the wall is 0.2 and between the ladder and the floor is 0.5. Determine the force 
+     P applied horizontally at the bottom to just produce motion to the left.
+
+<br>
+<img src="img/72.png" alt="Image Not found" width="200px"><br>
+Sol -
+</b><br>
+Free body diagram of ladder-<br>
+<img src="img/72.1.png" alt="Image Not found" width="200px"><br>
+
+&DoubleRightArrow; &circlearrowright;+ve&sum;M<sub>A</sub> = 0<br>
+&DoubleRightArrow; - F<sub>B</sub> x 4.5 - R<sub>B</sub> x 6 + 200 x 4.5/2 = 0<br>
+&DoubleRightArrow; - &mu;<sub>B</sub>R<sub>B</sub> x 4.5 - R<sub>B</sub> x 6 + 200 x 2.25 = 0<br>
+&DoubleRightArrow; (-0.2 x 4.5 - 6)R<sub>B</sub> + 450 = 0<br>
+&DoubleRightArrow; -6.9R<sub>B</sub> = -450<br>
+&DoubleRightArrow; R<sub>B</sub> = 65.217N<br><br>
+
+&DoubleRightArrow; &uparrow;+ve&sum;F<sub>y</sub> = 0<br>
+&DoubleRightArrow; R<sub>A</sub> + F<sub>B</sub> - 200 = 0<br>
+&DoubleRightArrow; R<sub>A</sub> + &mu;<sub>B</sub>R<sub>B</sub> - 200 = 0<br>
+&DoubleRightArrow; R<sub>A</sub> + 0.2 x 65.217 - 200 = 0<br>
+&DoubleRightArrow; R<sub>A</sub> -186.956 = 0<br>
+&DoubleRightArrow; R<sub>A</sub> = 186.956N<br><br>
+
+&DoubleRightArrow; &RightArrow;+ve&sum;F<sub>x</sub> = 0<br>
+&DoubleRightArrow; -P + F<sub>A</sub> - R<sub>B</sub> = 0<br>
+&DoubleRightArrow; -P + &mu;<sub>A</sub>F<sub>A</sub> - 65.217 = 0<br>
+&DoubleRightArrow; P = 0.5 x 186.956 - 65.217 <br>
+&DoubleRightArrow; P = 28.261N <b>Ans</b> <br><br>
+
+
 
 
 
