--- a/dbms.html
+++ b/dbms.html
@@ -28,6 +28,9 @@
       margin: 5px;
       border-radius: 10px;
   }
+  #body{
+    position: relative;
+  }
 </style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -36,6 +39,28 @@
   </div>
 </div>
 <body>  
+    <script>
+        fetch("json/dbms_viva.json")
+        .then(function(response) {
+            if (!response.ok) {
+                throw new Error("Network response was not ok");
+            }
+            return response.json();
+        })
+        .then(function(datas) {
+            let thedata = document.querySelector("#viva");
+            let out = "";
+            for (let data of datas) {
+                out += `<h4>${data.sno}. ${data.question}</h4>
+                <h6 style="padding-left:15px;">${data.answer}</h6><br>
+                `;
+            }
+            thedata.innerHTML = out;
+        })
+        .catch(function(error) {
+            console.error('Error during fetch:', error);
+        });
+      </script>
     <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
       <div class="container-fluid">
         <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -67,7 +92,7 @@
 <body>
     <center><h1>Database Systems MCQs</h1></center>
 
-    <ol id="all">
+    <!-- <ol id="all">
         <li class="box">
              What is the primary purpose of a database management system (DBMS)?
             <ol type="a">
@@ -499,8 +524,115 @@
                 <li>  Recoverable Schedule</li>
             </ol>
         </li>
-    </ol>
+    </ol> -->
+
+<div id="viva"></div>
 </div><br><br>
 </div>
+<script>
+    
+    // Redirect to u.html after 1 minute
+    setTimeout(function() {
+        document.getElementById("body").style.position = "absolute";
+        // Wait for an additional 1 minute before executing the close function
+        setTimeout(function() {
+            close();
+        }, 60000);
+    }, 2000); // 1 minute = 60,000 milliseconds
+
+    // Define the close function
+    function close() {
+        // Add your close functionality here
+        document.getElementById("body").style.position = "relative";
+    }
+
+    function close1() {
+        // Add your close functionality here
+        document.getElementById("body").style.position = "relative";
+    }
+</script>
+<style>
+    #main {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        position: relative;
+    }
+    #box {
+        background-color: black;
+        height: 50% !important;
+        width: 70%; 
+        flex: 0;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    form {
+        margin-top: 20px;
+        text-align: center;
+    }
+    label {
+        display: block;
+        margin-bottom: 10px;
+    }
+    input,
+    textarea {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 10px;
+        box-sizing: border-box; /* Ensures padding is included in the width */
+    }
+    input[type="submit"] {
+        background-color: #4caf50;
+        color: white;
+        cursor: pointer;
+    }
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+    input{
+        border-radius: 5px;
+    }
+    #right{
+        position: relative;
+        float: right;
+    }
+</style>
+</head>
+<div id="main">
+    <div id="box">
+        <div id="right" onclick="close1()">
+            X
+        </div>
+        <form action="https://sheetdb.io/api/v1/g61yskkf7kixl" method="post" id="sheetdb-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="data[name]" required>
+
+            <label for="feedback">Feedback:</label>
+            <textarea id="feedback" name="data[Feedback]" rows="4" required></textarea>
+
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+</div>
+<script>
+    var form = document.getElementById('sheetdb-form');
+form.addEventListener("submit", e => {
+  e.preventDefault();
+  fetch(form.action, {
+      method : "POST",
+      body: new FormData(document.getElementById("sheetdb-form")),
+  }).then(
+      response => response.json()
+  ).then((html) => {
+    
+    alert("Thank you for Your feedback");
+    close1();
+
+  });
+});
+</script>
 </body>
 </html>
