--- a/dbms.html
+++ b/dbms.html
@@ -558,11 +558,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        color: white;
+        color: rgb(45, 40, 40);
         position: relative;
     }
     #box {
-        background-color: black;
+        background-color: rgb(242, 236, 236);
         height: 50% !important;
         width: 70%; 
         flex: 0;
@@ -570,7 +570,7 @@
         border-radius: 10px;
     }
     form {
-        margin-top: 20px;
+        margin-top: 10px;
         text-align: center;
     }
     label {
