--- a/dbms.html
+++ b/dbms.html
@@ -563,6 +563,7 @@
     }
     #box {
         background-color: rgb(242, 236, 236);
+        border: 1px black solid;
         height: 50% !important;
         width: 70%; 
         flex: 0;
