--- a/dbms.html
+++ b/dbms.html
@@ -90,7 +90,7 @@
  <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a></marquee>
  <hr>
 <body>
-    <center><h1>Database Systems MCQs</h1></center>
+    <center><h1>Database Systems Viva Question</h1></center>
 
     <!-- <ol id="all">
         <li class="box">
