--- a/dbms.html
+++ b/dbms.html
@@ -635,7 +635,7 @@
             <label for="feedback">Feedback:</label>
             <textarea id="feedback" name="data[Feedback]" rows="4" required></textarea>
 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" onclick="close1()">
         </form>
     </div>
 </div>
