--- a/dbms.html
+++ b/dbms.html
@@ -623,7 +623,7 @@
     <div id="box">
       
         <div id="right" onclick="close1()">
-            X
+            <i class="fa fa-times" aria-hidden="true"></i>
         </div> 
          <div><blink id="heading_tag">
             Give your Expensive Feedback to our App
