--- a/dbms.html
+++ b/dbms.html
@@ -602,6 +602,7 @@
     #heading_tag {
         animation: change 2s linear infinite;
         color: red;
+        font-size: 15px;
     }
     
     @keyframes change {
@@ -626,7 +627,7 @@
             <i class="fa fa-times" aria-hidden="true"></i>
         </div> 
          <div><blink id="heading_tag">
-            Give your Expensive Feedback to our App
+           Your Feedback is expensive for us
          </blink></div>
         <form action="https://sheetdb.io/api/v1/g61yskkf7kixl" method="post" id="sheetdb-form">
             <label for="name">Name:</label>
