--- a/dbms.html
+++ b/dbms.html
@@ -42,7 +42,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"/>
   </div>
 </div>
-<script>function onloading(){
+<script>function onloading(){debugger;
     var cookieString = document. cookie;
     var cookies = cookieString. split(';');
     var len = cookies. length;
