--- a/dbms.html
+++ b/dbms.html
@@ -693,7 +693,7 @@ form.addEventListener("submit", e => {
     alert("Thank you for Your feedback");
     close1();
     document.cookie = "user=active";
-    document.cookie = "name:"+document.getElementById("name").value;
+    document.cookie = "name="+document.getElementById("name").value;
 
   });
 });
