--- a/dbms.html
+++ b/dbms.html
@@ -116,7 +116,7 @@
         </div></div>
       </header>
 <div id="body">
-    <center><div id="wishing_part">Welcome</div></center>
+    <center><div id="wishing_part"><b>Welcome</b></div></center>
  <hr>
  <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a></marquee>
  <hr>
