--- a/dbms.html
+++ b/dbms.html
@@ -567,7 +567,7 @@
     var foundActiveUser = false;
     for(i=0; i<len; i++){
         if(cookies[i]==="user=active"){
-            document.getElementById("body").style.position = "none";
+            document.getElementById("body").style.display = "none";
             foundActiveUser = true;
         break;
         }
