--- a/dbms.html
+++ b/dbms.html
@@ -566,7 +566,7 @@
     var len = cookies. length;
     var foundActiveUser = false;
     for(i=0; i<len; i++){
-        if(cookies[i]==="user=active"){
+        if(cookies[i]==="user=active"){debugger;
             document.getElementById("main").style.visibility="hidden";
             foundActiveUser = true;
         break;
