--- a/dbms.html
+++ b/dbms.html
@@ -607,6 +607,7 @@
         align-items: center;
         color: rgb(45, 40, 40);
         position: relative;
+        visibility: visible;
     }
     #box {
         background-color: rgb(242, 236, 236);
