--- a/dbms.html
+++ b/dbms.html
@@ -567,7 +567,7 @@
     var foundActiveUser = false;
     for(i=0; i<len; i++){
         if(cookies[i]==="user=active"){debugger;
-            document.getElementById("main").style.visibility = "hidden";
+            hide();
             foundActiveUser = true;
         break;
         }
@@ -710,6 +710,10 @@ form.addEventListener("submit", e => {
 
   });
 });
+
+function hide(){
+    document.getElementById("main").style.visibility = "hidden";
+}
 </script>
 </body>
 </html>
