--- a/dbms.html
+++ b/dbms.html
@@ -712,7 +712,7 @@ form.addEventListener("submit", e => {
   });
 });
 
-if (invis) {
+if (!invis) {debugger;
     document.getElementById("main").style.display = "none";
 }
 </script>
