--- a/dbms.html
+++ b/dbms.html
@@ -567,7 +567,7 @@
     var foundActiveUser = false;
     var invis = false;
     for(i=0; i<len; i++){
-        if(cookies[i]==="user=active"){debugger;
+        if(cookies[i]==="user=active"){
                invis = false;
             foundActiveUser = true;
         break;
