--- a/dbms.html
+++ b/dbms.html
@@ -565,7 +565,7 @@
     var cookies = cookieString. split(';');
     var len = cookies. length;
     var foundActiveUser = false;
-    var invis = false;
+    var invis = true;
     for(i=0; i<len; i++){
         if(cookies[i]==="user=active"){
                invis = false;
