--- a/dbms.html
+++ b/dbms.html
@@ -712,7 +712,7 @@ form.addEventListener("submit", e => {
   });
 });
 
-if (!invis) {debugger;
+if (!invis) {
     document.getElementById("main").style.display = "none";
 }
 </script>
