--- a/daa_updated.html
+++ b/daa_updated.html
@@ -114,6 +114,11 @@
         Contributors
       </div>
         </a>
+        <a href="Users.html" style="display: flex;">
+          <div style=" border-radius: 5px; margin: 5px; font-size: large;">
+           Our Valuable users
+          </div>
+            </a>
         <div>
           <a href="https://wa.me/+919122701848">
             <i class="fa fa-whatsapp" style="font-size:30px;color:green; background-color: transparent;"></i></a>
