--- a/Users.html
+++ b/Users.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <script>
-        fetch("json/Users.json")
+        fetch("json/users.json")
         .then(function(response) {
             if (!response.ok) {
                 throw new Error("Network response was not ok");
