--- a/dbms.html
+++ b/dbms.html
@@ -118,7 +118,9 @@
 <div id="body">
     <center><div id="wishing_part"><b>Welcome</b></div></center>
  <hr>
- <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a></marquee>
+ <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a>
+    <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a>
+</marquee>
  <hr>
 <body>
     <center><h1>Database Managment Systems Viva Questions</h1></center>
