--- a/dbms.html
+++ b/dbms.html
@@ -119,7 +119,7 @@
     <center><div id="wishing_part"><b>Welcome</b></div></center>
  <hr>
  <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a>
-    <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a>
+    <!-- <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a> -->
 </marquee>
  <hr>
 <body>
