--- a/dbms.html
+++ b/dbms.html
@@ -17,6 +17,14 @@
 
 
 </script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        if(window.location.contains("daa_viva")) // This doesn't work, any suggestions?
+        {
+             location.href = "json/daa_viva.json";
+        }
+    });
+    </script>
 <style>
   *{
       padding: 0;
