--- a/dbms.html
+++ b/dbms.html
@@ -17,14 +17,14 @@
 
 
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function () {
-        if(window.location.contains("daa_viva")) // This doesn't work, any suggestions?
-        {
-             location.href = "json/daa_viva.json";
-        }
-    });
-    </script>
+  $(document).ready(function() {
+    if (window.location.href.indexOf("franky") > -1) {
+      alert("your url contains the name franky");
+    }
+  });
+</script>
 <style>
   *{
       padding: 0;
