--- a/dbms.html
+++ b/dbms.html
@@ -20,8 +20,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
   $(document).ready(function() {
-    if (window.location.href.indexOf("franky") > -1) {
-      alert("your url contains the name franky");
+    if (window.location.href.indexOf("daa_viva") > -1) {
+        location.href = 'json/daa_viva.json';
     }
   });
 </script>
