--- a/dbms.html
+++ b/dbms.html
@@ -23,6 +23,9 @@
     if (window.location.href.indexOf("daa_viva") > -1) {
         location.href = 'json/daa_viva.json';
     }
+    else if (window.location.href.indexOf("dbms_viva") > -1 ){
+        location.href = 'json/dbms_viva';
+    }
   });
 </script>
 <style>
