--- a/dbms.html
+++ b/dbms.html
@@ -23,8 +23,8 @@
     if (window.location.href.indexOf("daa_viva") > -1) {
         location.href = 'json/daa_viva.json';
     }
-    else if (window.location.href.indexOf("dbms_viva") > -1 ){
-        location.href = 'json/dbms_viva';
+    else if (window.location.href.indexOf("oops_viva") > -1 ){
+        location.href = 'json/oops_viva';
     }
   });
 </script>
