--- a/dbms.html
+++ b/dbms.html
@@ -24,7 +24,7 @@
         location.href = 'json/daa_viva.json';
     }
     else if (window.location.href.indexOf("oops_viva") > -1 ){
-        location.href = 'json/oops_viva';
+        location.href = 'json/oops_viva.json';
     }
   });
 </script>
