--- a/a.html
+++ b/a.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MCQ Quiz</title>
 </head>
 <style>
-    .hidden{
+    .hidden {
         display: none;
+    }
+
+    .feedback {
+        font-weight: bold;
+        margin-left: 10px;
+    }
+
+    .correct {
+        color: green;
+    }
+
+    .incorrect {
+        color: red;
     }
 </style>
 <script>
@@ -23,22 +36,41 @@
         let out = "";
         for (let question of data.questions) {
             out += `<div>
-                      <h4>${question.sno}.${question.question}</h4>
-                      <ul>`;
-            for (let option of question.options) {
-                out += `<li id="${question.sno}"> ${option}</li>`;
+                      <h4>${question.sno}. ${question.question}</h4>`;
+            for (let i = 0; i < question.options.length; i++) {
+                out += `<input type="radio" name="question${question.sno}" id="option${question.sno}_${i + 1}" value="${question.options[i]}" onclick="checkAnswer(${question.sno}, ${i})">
+                        <label for="option${question.sno}_${i + 1}">${question.options[i]}</label><br>`;
             }
-            out += `</ul>
-            <p class = "hidden">${question.answer}</p>
-                   </div><br>`;
+            out += `
+            <p class="hidden" id="answer${question.sno}">${question.answer}</p>
+            <p id="feedback${question.sno}" class="feedback"></p></div><br>`;
         }
         thedata.innerHTML = out;
     })
     .catch(function(error) {
         console.error('Error during fetch:', error);
     });
-  </script>
-  
+
+    function checkAnswer(questionNumber, selectedOption) {
+        let selectedAnswer = document.querySelector(`input[name="question${questionNumber}"]:checked`).value;
+        let correctAnswer = document.querySelector(`#answer${questionNumber}`).innerText;
+        let feedbackElement = document.querySelector(`#feedback${questionNumber}`);
+
+        feedbackElement.innerText = ""; // Reset feedback text
+
+        if (selectedAnswer === correctAnswer) {
+            feedbackElement.classList.add("correct");
+            feedbackElement.innerText = "Correct!";
+          
+
+        } else {
+            feedbackElement.classList.add("incorrect");
+            feedbackElement.innerText = "Incorrect. Try again!";
+            
+        }
+    }
+</script>
+</head>
 <body>
     <div id="mcq"></div>
 </body>
