--- a/dbms.html
+++ b/dbms.html
@@ -132,6 +132,9 @@
  <!-- <marquee><a href="https://bit.ly/47pIBam">Mathematics assignment </a> -->
     <!-- <a href="https://bit.ly/group_debuggers">Joint us <i class="fa fa-whatsapp" style="color: #45a049;" aria-hidden="true"></i></a> -->
 <!-- </marquee> -->
+
+<a href="math_mcq.html">Mathematics MCQ</a>
+<hr>
  
 <body>
     <center><h1>Database Managment Systems Viva Questions</h1></center>
