--- a/a.html
+++ b/a.html
@@ -17,7 +17,7 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
+        document.addEventListener('DOMContentLoaded', function () {debugger;
             var cookieString = document.cookie;
             var cookies = cookieString.split(';');
             var len = cookies.length;
@@ -27,7 +27,7 @@
                 var n = cookies[i].trim().split("=");
 
                 // Check if cookie name is "name"
-                if (n[0] === " name") {
+                if (n[0] === "name") {
                     // Set values in the form
                     document.getElementById("user").value = "n[1]";
                     document.getElementById("time").value = "1";
