--- a/a.html
+++ b/a.html
@@ -29,7 +29,7 @@
                 // Check if cookie name is "name"
                 if (n[0] === "name") {
                     // Set values in the form
-                    document.getElementById("user").value = "n[1]";
+                    document.getElementById("user").value = n[1];
                     document.getElementById("time").value = "1";
                     
                        // Automatically submit the form
