--- a/a.html
+++ b/a.html
@@ -17,7 +17,7 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
+        document.addEventListener('DOMContentLoaded', function () {debugger;
             var cookieString = document.cookie;
             var cookies = cookieString.split(';');
             var len = cookies.length;
