--- a/a.html
+++ b/a.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="loginactive">
+    <div id="loginactive" style="display: none;">
         <form action="https://sheetdb.io/api/v1/o3nxu9n6otryl" method="post" id="logindb">
             <input type="text" id="user" name="data[username]">
             <input type="text" name="data[time]" id="time">
