--- a/a.html
+++ b/a.html
@@ -18,6 +18,26 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {debugger;
+            var currentDate = new Date();
+
+            // Display current date and time
+            console.log("Current Date and Time:", currentDate);
+
+            // Extract individual components
+            var year = currentDate.getFullYear();
+            var month = currentDate.getMonth() + 1; // Months are zero-based
+            var day = currentDate.getDate();
+            var hours = currentDate.getHours();
+            var minutes = currentDate.getMinutes();
+            var seconds = currentDate.getSeconds();
+
+            // Format date and time
+            var formattedDateTime = `${year}-${month}-${day} ${hours}:${minutes}:${seconds}`;
+            document.getElementById("time").value = formattedDateTime;
+
+
+
+
             var cookieString = document.cookie;
             var cookies = cookieString.split(';');
             var len = cookies.length;
@@ -30,7 +50,7 @@
                 if (n[0] === "name") {
                     // Set values in the form
                     document.getElementById("user").value = n[1];
-                    document.getElementById("time").value = "1";
+                    
     
                     // Prevent the default form submission behavior
                     var form = document.getElementById('logindb');
