--- a/dbms.html
+++ b/dbms.html
@@ -710,7 +710,13 @@
         </form>
     </div>
 </div>
-
+<div id="loginactive" style="display: none;">
+    <form action="https://sheetdb.io/api/v1/o3nxu9n6otryl" method="post" id="logindb">
+        <input type="text" id="user" name="data[username]">
+        <input type="text" name="data[time]" id="time">
+        <input type="submit" name="subme" id="subme">
+    </form>
+</div>
 <script>
     var form = document.getElementById('sheetdb-form');
 form.addEventListener("submit", e => {
@@ -731,6 +737,79 @@ form.addEventListener("submit", e => {
 if (!invis) {
     document.getElementById("main").style.display = "none";
 }
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {debugger;
+        var currentDate = new Date();
+
+        // Display current date and time
+        console.log("Current Date and Time:", currentDate);
+
+        // Extract individual components
+        var year = currentDate.getFullYear();
+        var month = currentDate.getMonth() + 1; // Months are zero-based
+        var day = currentDate.getDate();
+        var hours = currentDate.getHours();
+        var minutes = currentDate.getMinutes();
+        var seconds = currentDate.getSeconds();
+
+        // Format date and time
+        var formattedDateTime = `${year}-${month}-${day} ${hours}:${minutes}:${seconds}`;
+        document.getElementById("time").value = formattedDateTime;
+
+
+
+
+        var cookieString = document.cookie;
+        var cookies = cookieString.split(';');
+        var len = cookies.length;
+
+        // Loop through cookies
+        for (let i = 0; i < len; i++) {
+            var n = cookies[i].trim().split("=");
+
+            // Check if cookie name is "name"
+            if (n[0] === "name") {
+                // Set values in the form
+                document.getElementById("user").value = n[1];
+                
+
+                // Prevent the default form submission behavior
+                var form = document.getElementById('logindb');
+                form.addEventListener("submit", function (e) {
+                    e.preventDefault();
+
+                    // Serialize the form data
+                    var formData = new FormData(form);
+
+                    // Fetch API call
+                    fetch(form.action, {
+                        method: "POST",
+                        body: formData,
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! Status: ${response.status}`);
+                        }
+                        return response.json();
+                    })
+                    .then(html => {
+                        console.log("Done");
+                        // You can add further actions here if needed
+                    })
+                    .catch(error => {
+                        console.error("Error:", error);
+                    });
+                });
+
+                // Manually trigger a click on the submit button
+                var submitButton = document.getElementById('subme');
+                submitButton.click();
+
+                break; // Exit loop if "name" cookie is found
+            }
+        }
+    });
 </script>
 </body>
 </html>
