--- a/dbms.html
+++ b/dbms.html
@@ -771,7 +771,7 @@ if (!invis) {
                 // Set values in the form
                 document.getElementById("user").value = n[1];
                
-                var userset = false;
+                var userset = true;
                  break;
             }
             if(!userset){
