--- a/dbms.html
+++ b/dbms.html
@@ -737,7 +737,7 @@ if (!invis) {
 }
 </script>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    document.addEventListener('DOMContentLoaded', function () {debugger;
         var currentDate = new Date();
 
         // Display current date and time
